<resources>
    <string name="app_name" translatable="false">ValorGuide &amp; Stats</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="agents">Agents</string>
    <string name="game_info">Game Info</string>
    <string name="stats">Stats</string>
    <string name="weapons">Weapons</string>
    <string name="maps">Maps</string>
    <string name="game_modes">Game Modes</string>
    <string name="about_agent">About Agent</string>
    <string name="agent_abilities">Agent Abilities</string>
    <string name="agent_details">Agent Details</string>
    <string name="seasons">Seasons</string>
    <string name="cordinates">Cordinates : </string>
    <string name="weapon_class">Weapon Class</string>
    <string name="head">Head</string>
    <string name="body">Body</string>
    <string name="leg">Leg</string>
    <string name="damage_stats">Damage Stats</string>
    <string name="_5_vs_5_agent_based_tactical_shooter_game">5 vs 5 Agent based, tactical shooter game</string>
    <string name="valorant_web_page">Valorant Game Web Page</string>
    <string name="start_date">"Start Date : "</string>
    <string name="end_date">"End Date : "</string>
    <string name="knife_have_not_details_screen_yet">Knife have not details screen yet</string>
    <string name="agent_role">Agent Role</string>
    <string name="initiator">Initiator</string>
    <string name="sentinel">Sentinel</string>
    <string name="duelist">Duelist</string>
    <string name="controller">Controller</string>
    <string name="sentinel_desc">Sentinels are defensive experts who can lock down areas and watch flanks, both on attacker and defender rounds.</string>
    <string name="controller_desc">Controllers are experts in slicing up dangerous territory to set their team up for success.</string>
    <string name="duelist_desc">Duelists are self-sufficient fraggers who their team expects, through abilities and skills, to get high frags and seek out engagements first.</string>
    <string name="initator_desc">Initiators challenge angles by setting up their team to enter contested ground and push defenders away.</string>
    <string name="agent_roles">Agent Roles</string>
    <string name="this_map_is_a_game_training_area_unfortunately_doesn_t_have_a_detailed_map_view">This map is a game training area, Unfortunately, doesn\'t have a detailed map view.</string>
    <string name="okay">Okay</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="account_id">Account Id</string>
    <string name="prefix_tag" translatable="false">#</string>
    <string name="user_tag">User Tag</string>
    <string name="get_stats">Get Stats</string>
    <string name="this_app_uses_henrik_3_valorant_stats_api_for_account_rank_matches_etc_this_api_isn_t_endorsed_by_riot_games"><![CDATA[This app uses Henrik-3 \' Valorant stats API for account rank & matches etc. , This API isn\'t endorsed by Riot Games]]></string>
    <string name="last_matches">Last Matches</string>
    <string name="mmr_change">MMR Change</string>
    <string name="server_status">Server Status</string>
    <string name="check_server_status">Check Server Status</string>
    <string name="there_is_a_maintenance_but_game_can_be_playable">There is a maintenance but game can be playable</string>
    <string name="there_is_no_issue">There is no issue</string>
    <string name="game_mode">Game Mode : </string>
    <string name="team_red">Team Red</string>
    <string name="team_blue">Team Blue</string>
    <string name="map">"Map : "</string>
    <string name="rounds_played">Rounds Played :</string>
    <string name="your_stats">Your Stats</string>
    <string name="remember_me">Remember me</string>
    <string name="_02d_m_02d_s">%02d m  %02d s</string>
    <string name="game_length">"Game Length : "</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="go_back">Go Back</string>
    <string name="deathmatch_mode_haven_t_detailed_match_view">Deathmatch mode haven\'t detailed match view</string>
    <string name="competitive">Competitive</string>
    <string name="unrated">Unrated</string>
    <string name="deathmatch">Deathmatch</string>
    <string name="premier">Premier</string>
    <string name="escalation">Escalation</string>
    <string name="onboarding">Onboarding</string>
    <string name="replication">Replication</string>
    <string name="spike_rush">Spike Rush</string>
    <string name="practice">PRACTICE</string>
    <string name="snowball_fight">Snowball Fight</string>
    <string name="swiftplay">Swiftplay</string>
    <string name="not_an_video_preview">This skin has not an video preview</string>
    <string name="skins">Skins</string>
    <string name="video_preview">Video Preview</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="knife">Knife</string>
    <string name="weapon_skin_image">Weapon Skin Image</string>
    <string name="sprays">Sprays</string>
    <string name="share">Share</string>
    <string name="close">Close</string>
    <string name="animated">Animated</string>
    <string name="valorant" translatable="false">Valorant</string>
    <string name="guide_amp_stats" translatable="false"><![CDATA[Guide & Stats]]></string>
    <string name="unknown">Unknown</string>
    <string name="match_state" translatable="false">Match State</string>
    <string name="team_deathmatch">Team Deathmatch</string>
    <string name="bundles" translatable="false">Bundles</string>
    <string name="valor" translatable="false">Valor</string>
    <string name="sorry_for_this_skin_there_is_no_playable_video">Sorry, for this skin there is no playable video</string>
</resources>