<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.aayar94.valorantguidestats.ui.fragment.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_agentsFragment"
            app:destination="@id/agentsFragment" />
    </fragment>
    <fragment
        android:id="@+id/agentsFragment"
        android:name="com.aayar94.valorantguidestats.ui.fragment.agents.AgentsFragment"
        android:label="@string/agents"
        tools:layout="@layout/fragment_agents" />
    <fragment
        android:id="@+id/weaponsFragment"
        android:name="com.aayar94.valorantguidestats.ui.fragment.weapons.WeaponsFragment"
        android:label="@string/weapons"
        tools:layout="@layout/fragment_weapons" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.aayar94.valorantguidestats.ui.fragment.maps.MapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/statsFragment"
        android:name="com.aayar94.valorantguidestats.ui.fragment.stats.StatsFragment"
        android:label="@string/stats"
        tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.aayar94.valorantguidestats.ui.fragment.Info.InfoFragment"
        android:label="@string/game_info"
        tools:layout="@layout/fragment_info" />
</navigation>