<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ValorantBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/weaponDetailsCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardBackgroundColor="@color/ValorantBlueLight">

            <ImageView
                android:id="@+id/weapon_detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/weapon_detail_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/anton"
                android:gravity="center"
                android:textColor="@color/ValorantRed"
                android:textSize="36sp"
                tools:text="Odin" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/weaponClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/weapon_class"
            android:textColor="@color/ValorantRed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weaponClassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textColor="@color/ValorantRed"
            android:textSize="18sp"
            tools:text="Heavy Weapon" />

        <TextView
            android:id="@+id/damageStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/damage_stats"
            android:textColor="@color/ValorantRed"
            android:textSize="24sp" />


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/statsDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            app:dividerColor="@color/ValorantRed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/txt_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:minWidth="60dp"
                android:text="@string/head"
                android:textColor="@color/ValorantRed" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressBarHeadDamage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:max="200"
                app:indicatorColor="@color/ValorantRed"
                app:trackColor="@color/gray"
                app:trackThickness="18dp" />

            <TextView
                android:id="@+id/headDamage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:minWidth="60dp"
                android:textColor="@color/ValorantRed"
                android:textSize="16sp"
                tools:text="150" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/txt_body"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:text="@string/body"
                android:textColor="@color/ValorantRed" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressBarBodyDamage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:max="200"
                app:indicatorColor="@color/ValorantRed"
                app:trackColor="@color/gray"
                app:trackThickness="18dp" />

            <TextView
                android:id="@+id/bodyDamage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:textColor="@color/ValorantRed"
                android:textSize="16sp"
                tools:text="150" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/txt_Leg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:text="@string/leg"
                android:textColor="@color/ValorantRed" />


            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressBarLegDamage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:max="200"
                app:indicatorColor="@color/ValorantRed"
                app:trackColor="@color/gray"
                app:trackThickness="18dp" />

            <TextView
                android:id="@+id/legDamage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:textColor="@color/ValorantRed"
                android:textSize="16sp"
                tools:text="150" />
        </LinearLayout>

        <TextView
            android:id="@+id/skinsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/skins"
            android:textColor="@color/ValorantRed"
            android:textSize="24sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/skinsDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            app:dividerColor="@color/ValorantRed" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/ValorantBlue"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/ValorantRed"
            app:tabMinWidth="80dp"
            app:tabMode="scrollable"
            app:tabTextColor="@color/ValorantRed" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/skinViewPager"
            android:layout_width="match_parent"
            android:layout_height="600dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>