<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.info.InfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/mapsCardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:textAlignment="center"
                app:cardBackgroundColor="@color/valorant_blue_light"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/maps_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:textColor="@color/valorant_red"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:text="@string/maps"
                    android:textSize="48dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/seasonsCardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:textAlignment="center"
                app:cardBackgroundColor="@color/valorant_blue_light"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/seasons_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo_valorant"
                    app:tint="@color/valorant_red_overlay" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:textColor="@color/valorant_red"
                    android:text="@string/seasons"
                    android:textSize="48sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/weaponsCardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:textAlignment="center"
                app:cardBackgroundColor="@color/valorant_blue_light"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/weapons_iv"
                    android:layout_marginHorizontal="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:textColor="@color/valorant_red"
                    android:text="@string/weapons"
                    android:textSize="48sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/statsCardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:textAlignment="center"
                app:cardBackgroundColor="@color/valorant_blue_light"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

            <ImageView
                android:id="@+id/stats_iv"
                android:layout_marginHorizontal="8dp"
                android:layout_margin="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="@font/anton"
                android:gravity="center"
                android:textColor="@color/valorant_red"
                android:text="@string/stats"
                android:textSize="48sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>