<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_agents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/agents"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/agentsDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="@color/valorant_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_agents" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_agents"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/agentsDivider" />

            <TextView
                android:id="@+id/tv_gamemodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/game_modes"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="@+id/tv_agents"
                app:layout_constraintTop_toBottomOf="@id/rv_agents" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/gamemodesDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="@color/valorant_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_gamemodes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_gamemodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamemodesDivider" />

            <TextView
                android:id="@+id/tv_weapons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/weapons"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="@id/tv_agents"
                app:layout_constraintTop_toBottomOf="@id/rv_gamemodes" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/weaponsDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="@color/valorant_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_weapons" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_weapons"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:orientation="horizontal"
                app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weaponsDivider" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>